--- a/fresh_mutenka/src/components/common/sidenav/sidenav.module.css
+++ b/fresh_mutenka/src/components/common/sidenav/sidenav.module.css
@@ -3,25 +3,33 @@
     flex-direction: column;
     justify-content: center;
     height: 100vh; /* 画面の全高さ */
-    width: 250px; /* サイドナビゲーションの幅 */
+    width: 300px; /* サイドナビゲーションの幅 */
     position: fixed; /* 固定位置 */
     top: 0; /* 上から0pxの位置 */
     left: 0; /* 左から0pxの位置 */
-    background-color: #72c97f; /* 背景色 */
+    background-color: #ececec; /* 背景色 */
     color: rgb(0, 0, 0); /* 文字色 */
-    padding: 10px; /* 内側の余白 */
+    padding: 20px; /* 内側の余白 */
   }
   
   .menuItem {
     padding: 10px; /* 内側の余白 */
-    margin: 10px 0; /* 外側の余白（上下） */
+    margin: 80px 0; /* 外側の余白（上下） */
     background-color: rgb(151, 238, 177); /* 背景色 */
     color: black; /* テキストの色を黒に変更 */
     display: flex; /* Flexboxを使って中央揃えを行う */
     align-items: center; /* 縦方向の中央揃え */
     justify-content: center; /* 横方向の中央揃え */
+    font-weight: bold;
+    border-radius: 10px;
   }
 
   .currentGoal {
-    padding: 20px; /* パディングを増やして縦幅を大きくする */
+    padding: 60px; /* パディングを増やして縦幅を大きくする */
+    font-size: 20px;
+  }
+
+  .flag{
+    font-size: 20px;
+    margin-right: 10px;
   }
