homeのレイアウト

--- a/fresh_mutenka/src/components/common/Header/header.module.css
+++ b/fresh_mutenka/src/components/common/Header/header.module.css
@@ -1,5 +1,5 @@
 .header {
-    height: 55px;
+    height: 100%;
     background-color:  #395B3E;
     display: flex;
     justify-content: space-between;
