--- a/fresh_mutenka/src/components/home/chat/chat.module.css
+++ b/fresh_mutenka/src/components/home/chat/chat.module.css
@@ -1,7 +1,61 @@
-.button {
-    
+.chatContainer {
+    border: solid 1px gray;
 }
-.container {
-    width: 100%;
-    height: 100%;
+
+.messageWrapper {
+    margin: 10px;
+}
+
+.styles.userWrapper {
+    margin-bottom: 25px;
+}
+
+.nameYou {
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.messageYou {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.chatGPTWrapper {
+    margin-bottom: 25px;
+}
+
+.nameChatGPT {
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.messageChatGPT {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.textWrapper {
+    border: solid 1px gray;
+    border-radius: 5px;
+    margin: 10px;
+}
+
+.textWrapper input {
+    border: none;
+    width:1143px;
+    height: 50px;
+    font-size: 30px;
+}
+
+.textWrapper button {
+    float:right;
+    border: none;
+    background-color: white;
+}
+
+.submitBtn img{
+    float:right;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
 }
