chatのスタイルを設定

--- a/fresh_mutenka/src/components/home/chat/chat.module.css
+++ b/fresh_mutenka/src/components/home/chat/chat.module.css
@@ -1,17 +1,28 @@
 .chatContainer {
     border: solid 1px gray;
+    height: calc(100vh - 55px);
+    width: ;
+    display: flex;
+    flex-direction: column;
+    /* background-color: black; */
 }
 
+.messageContainer {
+  flex-direction: column-reverse; 
+  overflow-y: auto; 
+  height: 100%; 
+
+}
 .messageWrapper {
     margin: 10px;
 }
 
-.styles.userWrapper {
+.userWrapper {
     margin-bottom: 25px;
 }
 
 .nameYou {
-    font-weight: bold;
+    font-weight: 800;
     margin-bottom: 4px;
 }
 
@@ -25,24 +36,26 @@
 }
 
 .nameChatGPT {
-    font-weight: bold;
+    font-weight: 800;
     margin-bottom: 4px;
 }
 
 .messageChatGPT {
     margin-top: 0;
     margin-bottom: 0;
+   
 }
 
 .textWrapper {
     border: solid 1px gray;
     border-radius: 5px;
     margin: 10px;
+    justify-self: start;
 }
 
 .textWrapper input {
     border: none;
-    width:1143px;
+    width:90%;
     height: 50px;
     font-size: 30px;
 }
