--- a/fresh_mutenka/src/components/list/list/list.module.css
+++ b/fresh_mutenka/src/components/list/list/list.module.css
@@ -1,10 +1,11 @@
-.component-list {
-  width: 1000px;
+.listWrapper {
+  width: 1000;
   height: 500px;
 }
 
 .list {
   border-collapse: collapse;
+  /* height: 500px; */
 }
 
 .list td {
